--- a/apple-pie/styles/style.css
+++ b/apple-pie/styles/style.css
@@ -3,6 +3,7 @@
 html {
   box-sizing: border-box;
   font-size: 16px;
+  
 }
 
 *, *:before, *:after {
@@ -16,9 +17,106 @@ body, h1, h2, h3, h4, h5, h6, p, ol, ul {
 }
 
 /*  Set the font */
+
 body {
-  font-family: "Helvetica", sans-serif;
+  width: fit-content;
+  font-family: sans-serif;
 }
 
+h1{ 
+  display: flex;
+  justify-content: center;
+  font-size: 6em;
+  transform: uppercase;
+  color:white;
+  padding-top: 29%;
+}
+
+h2{
+  font-size: 1em;
+  font-weight: 20px;
+  margin-left: 50px;
+  padding-left: 115px;
+  line-height: 5em;
+}
+
+h3{
+  font-size: 1em;
+  font-weight: 20px;
+  line-height: 5em;
+  margin-left: 50px;
+  padding-left: 115px;
+  font-weight: 20px;
+} 
 /* STYLES */
 /* Write your CSS below */
+ section{ 
+  background-image: url("../images/apple-pie.jpg");
+  background-repeat:no-repeat;
+  background-size: cover;
+  height: 855px;
+  margin-top: -120px;
+}
+.paragh{
+  font-size: 17px;
+  margin: 0 auto;
+  padding-top: 40px;
+  padding-bottom: 27px;
+  padding-left: 170px;
+  padding-right: 160px;
+  text-align: center;
+}
+
+#ima{
+  margin:  auto;
+  display: flex;
+  justify-content: center;
+  height: 75px;
+  padding-bottom: 17px;
+}
+
+hr{
+  width: 74%;
+  font-weight: bold;
+
+}
+ #imags {
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  height: 7em;
+}
+
+ol{
+  font-size: 15px;
+  padding-left: 170px;
+  padding-right: 160px;
+  padding-bottom: 80px;
+}
+
+ol li{
+  list-style-type: none; 
+  margin-bottom: 11px;
+  counter-increment: ol-counter;
+}
+
+ol li::before {
+  content: counter(ol-counter) ") ";
+}
+
+ ul {
+  font-size: 13px;
+  padding-bottom: 30px;
+  padding-left: 170px;
+ }
+
+ul  li { 
+  list-style-type: none; 
+  margin-bottom: 5px;
+}
+
+ul li::before {
+content:  "-";
+}
